--- a/src/main/ListTitlePane/ListTitlePane.fxml
+++ b/src/main/ListTitlePane/ListTitlePane.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root animated="false" expanded="false" graphicTextGap="0.0" prefHeight="67.0" prefWidth="463.0" style="´: black;" stylesheets="@ListTitlePane.css" text=" " type="TitledPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root animated="false" expanded="false" graphicTextGap="0.0" prefHeight="67.0" prefWidth="553.0" style="´: black;" stylesheets="@ListTitlePane.css" text=" " type="TitledPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <content>
       <AnchorPane fx:id="orderTitleAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="575.0" styleClass="titleFlowPane">
          <children>
@@ -20,13 +20,13 @@
       <Pane prefHeight="58.0" prefWidth="523.0" stylesheets="@ListTitlePane.css">
          <children>
             <Label fx:id="nameLabel" layoutY="16.0" prefHeight="26.0" prefWidth="144.0" styleClass="labeltext" text="Inköpslista 1" />
-            <Button layoutX="316.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#addOrderToCart" styleClass="buttons" text="Lägg till i kundvagn">
+            <Button layoutX="161.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#addOrderToCart" styleClass="buttons" text="Lägg till i kundvagn">
                <font>
-                  <Font name="SansSerif Regular" size="12.0" />
+                  <Font name="SansSerif Regular" size="17.0" />
                </font></Button>
-            <Button layoutX="309.0" layoutY="32.0" mnemonicParsing="false" onMouseClicked="#removeAsSaved" styleClass="buttons" text="Ta bort som iköpslista">
+            <Button layoutX="357.0" layoutY="16.0" mnemonicParsing="false" onMouseClicked="#removeAsSaved" style="-fx-background-color: red; -fx-text-fill: white;" styleClass="buttons" text="Ta bort som iköpslista">
                <font>
-                  <Font name="SansSerif Regular" size="12.0" />
+                  <Font name="SansSerif Regular" size="14.0" />
                </font></Button>
          </children>
       </Pane>
