--- a/src/main/OrderTabTitlePane/OrderTabTitlePane.fxml
+++ b/src/main/OrderTabTitlePane/OrderTabTitlePane.fxml
@@ -23,7 +23,10 @@
                <font>
                   <Font name="SansSerif Regular" size="12.0" />
                </font></Label>
-            <Button fx:id="saveButton" layoutX="200.0" layoutY="17.0" mnemonicParsing="false" onMouseClicked="#onSaveButtonPressed" styleClass="buttons" text="Lägg till som iköpslista" />
+            <Button fx:id="saveButton" layoutX="275.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#onSaveButtonPressed" styleClass="buttons" text="Lägg till som iköpslista">
+               <font>
+                  <Font size="17.0" />
+               </font></Button>
          </children>
       </Pane>
    </graphic>
