--- a/src/main/CustomerSupport/CustomerSupport.fxml
+++ b/src/main/CustomerSupport/CustomerSupport.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -10,19 +11,18 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@../Res/styles.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <BorderPane layoutX="10.0" layoutY="10.0" prefHeight="800.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
-            <Pane prefHeight="101.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
+            <Pane prefHeight="101.0" prefWidth="960.0" styleClass="topBar" BorderPane.alignment="CENTER">
                <children>
-                  <Button layoutX="26.0" layoutY="14.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="97.0" text="Button" />
                   <ImageView fitHeight="113.0" fitWidth="101.0" layoutX="24.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../Res/Images/escape_hatch.png" />
                      </image>
                   </ImageView>
-                  <Button layoutX="829.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#onCloseWindowsButtonPressed" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: #037C99;" styleClass="cursor-hand" text="Kundservice &amp; Hjälp" textFill="WHITE" wrapText="true">
+                  <Button layoutX="829.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#onCloseWindowsButtonPressed" prefHeight="60.0" prefWidth="200.0" text="Kundservice &amp; Hjälp" textFill="WHITE" wrapText="true">
                      <graphic>
                         <ImageView fitHeight="65.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -33,6 +33,10 @@
                      <font>
                         <Font name="SansSerif Bold" size="17.0" />
                      </font>
+                     <styleClass>
+                        <String fx:value="cursor-hand" />
+                        <String fx:value="topBar" />
+                     </styleClass>
                   </Button>
                </children>
             </Pane>
@@ -46,7 +50,7 @@
                            <children>
                               <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
                                  <children>
-                                    <Pane layoutX="86.0" layoutY="21.0" prefHeight="61.0" prefWidth="642.0" style="-fx-background-color: #B1D5F6;">
+                                    <Pane layoutX="86.0" layoutY="21.0" prefHeight="61.0" prefWidth="642.0" styleClass="wizBar" stylesheets="@../Res/styles.css">
                                        <children>
                                           <Label layoutX="199.0" layoutY="10.0" prefHeight="38.0" prefWidth="261.0" text="Kundservice &amp; Hjälp" textAlignment="CENTER">
                                              <font>
@@ -55,7 +59,7 @@
                                           </Label>
                                        </children>
                                     </Pane>
-                                    <Pane layoutX="86.0" layoutY="123.0" prefHeight="443.0" prefWidth="642.0" style="-fx-background-color: #B1D5F6;">
+                                    <Pane layoutX="86.0" layoutY="123.0" prefHeight="443.0" prefWidth="642.0" styleClass="wizBar">
                                        <children>
                                           <Label layoutX="53.0" layoutY="19.0" prefHeight="139.0" prefWidth="552.0" text="Om du har synpunkter eller behöver hjälp så kan du alltid kontakta vår kundservice. Kontaktuppgifterna hittar du nedan." wrapText="true">
                                              <font>
