--- a/src/main/OrderTabTitlePane/OrderTabTitlePane.css
+++ b/src/main/OrderTabTitlePane/OrderTabTitlePane.css
@@ -64,3 +64,7 @@
 .buttons:hover{
     -fx-font-weight: bold;
 }
+
+.titleFlowPane{
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 2, 0, 0, 0);
+}
