--- a/src/main/Timetable/Timetable.fxml
+++ b/src/main/Timetable/Timetable.fxml
@@ -53,7 +53,7 @@
                      <children>
                         <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0">
                            <children>
-                              <Label fx:id="pageNameLabel" layoutX="269.0" layoutY="-1.0" text="Välj leveranstid">
+                              <Label fx:id="pageNameLabel" layoutX="269.0" layoutY="-1.0" text="Välj leveranstid" textFill="WHITE">
                                  <font>
                                     <Font name="SansSerif Regular" size="36.0" />
                                  </font></Label>
